[gd_scene load_steps=7 format=3 uid="uid://b2e4slbtmnihd"]

[ext_resource type="Script" path="res://WaterSim/water_point.gd" id="1_2rdum"]
[ext_resource type="Texture2D" uid="uid://1d1lsm2scd0g" path="res://icon.svg" id="1_aa6tg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iyx1t"]

[sub_resource type="Curve" id="Curve_dvnud"]
_data = [Vector2(0.0382775, 1), 0.0, 0.0, 0, 0, Vector2(0.894737, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_qgvcm"]
offsets = PackedFloat32Array(0, 0.267544, 0.565789, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.333593, 0.578919, 0.718059, 0.976601, 0.313617, 0.578938, 0.727466, 0.918122, 0, 0.579244, 0.875159, 0)

[sub_resource type="Curve" id="Curve_h62mv"]
min_value = -1.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="WaterPoint" type="Node2D" groups=["WaterPoint"]]
script = ExtResource("1_2rdum")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_aa6tg")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("RectangleShape2D_iyx1t")

[node name="ParticleTimer" type="Timer" parent="."]
wait_time = 0.207
one_shot = true

[node name="SplashParticles" type="CPUParticles2D" parent="."]
z_index = 1
emitting = false
amount = 4
randomness = 0.33
lifetime_randomness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(150, 1)
direction = Vector2(0, -1)
gravity = Vector2(0, 500)
initial_velocity_min = 218.49
initial_velocity_max = 381.73
angle_max = 360.0
scale_amount_min = 10.0
scale_amount_max = 30.0
scale_amount_curve = SubResource("Curve_dvnud")
color_ramp = SubResource("Gradient_qgvcm")
hue_variation_min = -0.01
hue_variation_max = 0.01
hue_variation_curve = SubResource("Curve_h62mv")

[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_area_entered"]
[connection signal="timeout" from="ParticleTimer" to="." method="_on_particle_timer_timeout"]
